--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "flowbite": "^2.3.0",
-    "flowbite-react": "^0.9.0",
+    "aos": "^2.3.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
